--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,54 +1,82 @@
- /* *{
-    text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;1,100;1,300&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  border: none;
+  outline: none;
+}
+body {
+  background-color: #ededed;
+  font-family: 'Montserrat', sans-serif;
+}
+.container {
+  height: 100vh;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-body{
-    background: #4e4d4d;
-    color: white;
-    display: grid;
-    grid-template-columns: 3fr 10fr;
-    width:100vw;
+.container-search {
+  height: 20%;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-nav{
-    padding: 20px 15%; 
-    border-right: solid 1px white;
-    height:100vh
+.search {
+  height: 50%;
+  width: 100%;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-nav section {
-    justify-content: space-around;
-    width: 80%;
-    margin: auto;
-
-}
-nav div{
-    margin-bottom: 20px;
+.search-contador {
+    display: flex;
+    padding-top: 20px;
+    gap: 10px;
 }
 
-
-
-
-.propiedades {
-    padding: 0px 5%;
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 45px
+.container_realState {
+  height: auto;
+  display: flex;
 }
-.propiedad{ 
-    margin: auto;
-    background: rgba(255, 255, 255, 0.068);
-    box-shadow: 0px 0px 7px 1px rgba(255, 255, 255, 0.39);
-}
-.propiedad .img{
-    height: 150px;
-    background-size: cover;
-    background-position: center;
-}
-.propiedad section{
-    padding: 10px 20px;
+.realState-card {
+  padding-top: 40px;
+  display: flex;
+  justify-content: center;
+  height: 350px;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
-.propiedad section p{
-    margin: 0px 
-}  */
+.card {
+  border-radius: 0;
+}
+
+.card-img,
+.card-img-top {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.card .titulo {
+  font-size: 11px;
+  font-weight: 700;
+  color: rgba(0,0,0,.8);
+}
+
+.card .subtitulo {
+    font-size: 13px;
+    font-weight: 700;
+  }
+  
+.card .description {
+    color: rgba(0,0,0,.45);
+}
